fix broken style with long messages

--- a/frontend/modules/profiles/layout/css/profiles.css
+++ b/frontend/modules/profiles/layout/css/profiles.css
@@ -127,6 +127,7 @@
 .messages .messageContent,
 .comments .messageContent {
 	float: left;
+	max-width: 600px;
 }
 
 .messageHolder, .thread {
